# vst-plugin-boilerplate

./: CMakeLists.txt  README.md  build.bat  build.sh  build32.bat  generateModel.js
audio-unit/: CMakeLists.txt  Info.plist
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
mac/audio-unit/resource/: Info.plist
resource/: plugin.uidesc
src/: calc.h  global.h  lfo.h  paramids.h  plugin_process.cpp  plugin_process.h  plugin_process.tcc  version.h  vst.cpp  vst.h  vstentry.cpp
src/ui/: controller.cpp  uimessagecontroller.h
